fix merge-conflict styles

--- a/appview/pages/templates/repo/pulls/pull.html
+++ b/appview/pages/templates/repo/pulls/pull.html
@@ -183,7 +183,7 @@
   {{ else if and .MergeCheck .MergeCheck.IsConflicted }}
     <div class="bg-red-50 dark:bg-red-900 border border-red-500 rounded drop-shadow-sm px-6 py-2 relative w-fit">
       <div class="absolute left-8 -top-2 w-px h-2 bg-gray-300 dark:bg-gray-600"></div>
-      <div class="flex flex-col items-center gap-2 text-red-500 dark:text-red-300">
+      <div class="flex flex-col gap-2 text-red-500 dark:text-red-300">
         <div class="flex items-center gap-2">
           {{ i "triangle-alert" "w-4 h-4" }}
           <span class="font-medium">merge conflicts detected</span>
