--- a/appview/pages/templates/fragments/repoActions.html
+++ b/appview/pages/templates/fragments/repoActions.html
@@ -1,5 +1,5 @@
 {{ define "fragments/repoActions" }}
-<div class="flex items-center">
+<div class="flex items-center gap-2">
   <button id="starBtn"
     class="btn disabled:opacity-50 disabled:cursor-not-allowed"
 
@@ -26,7 +26,7 @@
     </div>
   </button>
   <a class="btn no-underline hover:no-underline flex items-center" href="/{{ .FullName }}/fork">
-      {{ i "git-fork" "w-3 h-3 mr-1"}}
+      {{ i "git-fork" "w-3 h-3"}}
       fork
   </a>
 </div>
