--- a/appview/pages/templates/fragments/repoActions.html
+++ b/appview/pages/templates/fragments/repoActions.html
@@ -16,17 +16,17 @@
     >
     <div class="flex gap-2 items-center">
       {{ if .IsStarred }}
-      {{ i "star" "w-3 h-3 fill-current" }}
+      {{ i "star" "w-4 h-4 fill-current" }}
       {{ else }}
-      {{ i "star" "w-3 h-3" }}
+      {{ i "star" "w-4 h-4" }}
       {{ end }}
       <span>
         {{ .Stats.StarCount }}
       </span>
     </div>
   </button>
-  <a class="btn no-underline hover:no-underline flex items-center" href="/{{ .FullName }}/fork">
-      {{ i "git-fork" "w-3 h-3"}}
+  <a class="btn no-underline hover:no-underline flex items-center gap-2" href="/{{ .FullName }}/fork">
+      {{ i "git-fork" "w-4 h-4"}}
       fork
   </a>
 </div>
