--- a/appview/pages/templates/user/profile.html
+++ b/appview/pages/templates/user/profile.html
@@ -67,12 +67,29 @@
           </div>
           {{ else if eq .Type "repo" }}
           <div class="px-6 py-2 bg-white dark:bg-gray-800 rounded drop-shadow-sm w-fit flex items-center gap-3">
+            {{ if .Source }}
+            <div class="text-gray-800 dark:text-gray-400 p-1">
+              {{ i "git-fork" "w-5 h-5" }}
+            </div>
+            {{ else }}
             <div class="text-gray-800 dark:text-gray-400 p-1">
               {{ i "book-plus" "w-5 h-5" }}
             </div>
+            {{ end }}
             <div>
               <p class="text-gray-600 dark:text-gray-300">
-              created <a href="/{{ index $.DidHandleMap .Repo.Did }}/{{ .Repo.Name }}" class="no-underline hover:underline">{{ .Repo.Name }}</a>
+
+              {{ if .Source }}
+                forked
+                <a href="/{{ index $.DidHandleMap .Source.Did }}/{{ .Source.Name }}" class="no-underline hover:underline">
+                  {{ index $.DidHandleMap .Source.Did }}/{{ .Source.Name }}
+                </a>
+                to
+                <a href="/{{ didOrHandle $.UserHandle $.UserDid }}/{{ .Repo.Name }}" class="no-underline hover:underline">{{ .Repo.Name }}</a>
+              {{ else }}
+                created
+                <a href="/{{ index $.DidHandleMap .Repo.Did }}/{{ .Repo.Name }}" class="no-underline hover:underline">{{ .Repo.Name }}</a>
+              {{ end }}
               <time class="text-gray-700 dark:text-gray-400 text-xs ml-2">{{ .Repo.Created | shortTimeFmt }}</time>
               </p>
             </div>
