--- a/appview/pages/templates/repo/settings.html
+++ b/appview/pages/templates/repo/settings.html
@@ -22,7 +22,7 @@
         {{ end }}
     </div>
 
-    {{ if .IsCollaboratorInviteAllowed }}
+    {{ if .RepoInfo.Roles.CollaboratorInviteAllowed }}
         <form hx-put="/{{ $.RepoInfo.FullName }}/settings/collaborator">
             <label for="collaborator" class="dark:text-white"
                 >add collaborator</label
@@ -45,8 +45,8 @@
     {{ end }}
 
     <form hx-put="/{{ $.RepoInfo.FullName }}/settings/branches/default" class="mt-6">
-        <label for="branch">default branch:</label>
-        <select id="branch" name="branch" required class="p-1 border border-gray-200 bg-white">
+        <label for="branch">default branch</label>
+        <select id="branch" name="branch" required class="p-1 border border-gray-200 bg-white dark:bg-gray-800 dark:text-white dark:border-gray-700">
             {{ range .Branches }}
                 <option
                     value="{{ . }}"
@@ -61,4 +61,15 @@
         </select>
         <button class="btn my-2" type="text">save</button>
     </form>
+
+    {{ if .RepoInfo.Roles.RepoDeleteAllowed }}
+    <form hx-confirm="Are you sure you want to delete this repository?" hx-delete="/{{ $.RepoInfo.FullName }}/settings/delete" class="mt-6">
+        <label for="branch">delete repository</label>
+        <button class="btn my-2" type="text">delete</button>
+        <span>
+          Deleting a repository is irreversible and permanent.
+        </span>
+    </form>
+    {{ end }}
+
 {{ end }}
