--- a/appview/pages/templates/fragments/pullCompareBranches.html
+++ b/appview/pages/templates/fragments/pullCompareBranches.html
@@ -1,35 +1,20 @@
 {{ define "fragments/pullCompareBranches" }}
-
-<div id="patch-upload">
-  <label for="targetBranch" class="dark:text-white">configure branches</label>
-  <div class="flex flex-wrap gap-2 items-center">
-    <select
-        required
-        name="targetBranch"
-        class="p-1 border border-gray-200 bg-white dark:bg-gray-700 dark:text-white dark:border-gray-600"
+    <div id="patch-upload">
+        <label for="targetBranch" class="dark:text-white"
+            >select a branch</label
         >
-        <option disabled selected>target branch</option>
-        {{ range .Branches }}
-        <option value="{{ .Reference.Name }}" class="py-1">
-        {{ .Reference.Name }}
-        </option>
-        {{ end }}
-    </select>
-
-    {{ i "move-left" "w-5 h-5" }}
-
-    <select
-        name="sourceBranch"
-        class="p-1 border border-gray-200 bg-white dark:bg-gray-700 dark:text-white dark:border-gray-600"
-        >
-        <option disabled selected>source branch</option>
-        {{ range .Branches }}
-        <option value="{{ .Reference.Name }}" class="py-1">
-        {{ .Reference.Name }}
-        </option>
-        {{ end }}
-    </select>
-  </div>
-
-</div>
+        <div class="flex flex-wrap gap-2 items-center">
+            <select
+                name="sourceBranch"
+                class="p-1 border border-gray-200 bg-white dark:bg-gray-700 dark:text-white dark:border-gray-600"
+            >
+                <option disabled selected>source branch</option>
+                {{ range .Branches }}
+                    <option value="{{ .Reference.Name }}" class="py-1">
+                        {{ .Reference.Name }}
+                    </option>
+                {{ end }}
+            </select>
+        </div>
+    </div>
 {{ end }}
