--- a/appview/pages/templates/repo/pulls/pull.html
+++ b/appview/pages/templates/repo/pulls/pull.html
@@ -50,8 +50,13 @@
                   {{ if not .Pull.IsSameRepoBranch }}
                     <a href="/{{ $owner }}/{{ .PullSourceRepo.Name }}" class="no-underline hover:underline">{{ $owner }}/{{ .PullSourceRepo.Name }}</a>
                   {{ end }}
+                  
+                  {{ $fullRepo := .RepoInfo.FullName }}
+                  {{ if not .Pull.IsSameRepoBranch }}
+                    {{ $fullRepo = printf "%s/%s" $owner .PullSourceRepo.Name }}
+                  {{ end }}
                   <span class="text-xs rounded bg-gray-100 dark:bg-gray-700 text-black dark:text-white font-mono px-2 mx-1/2 inline-flex items-center">
-                    <a href="/{{ $owner }}/{{ .PullSourceRepo.Name }}/tree/{{ .Pull.PullSource.Branch }}" class="no-underline hover:underline">{{ .Pull.PullSource.Branch }}</a>
+                    <a href="/{{ $fullRepo }}/tree/{{ .Pull.PullSource.Branch }}" class="no-underline hover:underline">{{ .Pull.PullSource.Branch }}</a>
                   </span>
                 </span>
                 {{ end }}
