--- a/appview/pages/templates/repo/issues/new.html
+++ b/appview/pages/templates/repo/issues/new.html
@@ -1,4 +1,4 @@
-{{ define "title" }}new issue | {{ .RepoInfo.FullName }}{{ end }}
+{{ define "title" }}new issue &middot; {{ .RepoInfo.FullName }}{{ end }}
 
 {{ define "repoContent" }}
     <form
