--- a/appview/pages/templates/fragments/repoActions.html
+++ b/appview/pages/templates/fragments/repoActions.html
@@ -1,5 +1,5 @@
 {{ define "fragments/repoActions" }}
-<div class="flex items-center gap-2">
+<div class="flex items-center gap-2 z-auto">
   <button id="starBtn"
     class="btn disabled:opacity-50 disabled:cursor-not-allowed"
 
